# RevvedUp

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  test
.cache/clangd/index/: ALCheck.cpp.D21F573FFCA791DF.idx  ALCheck.hpp.A8B2845A0DC87685.idx  AlResource.cpp.180FA8990422D952.idx  AlResource.hpp.53C0C28EAA21FFD4.idx  Angle.hpp.6DBAF2B947DEE67E.idx  Angle.inl.F6148EFF498617EE.idx  AudioDevice.cpp.82C2FCC27DCEB80A.idx  AudioDevice.hpp.1949C7880E584F53.idx  AudioResource.cpp.E3B926E0831A59F0.idx  AudioResource.hpp.05E289FE8E2F28E5.idx  BlendMode.cpp.85DE58C6FB377860.idx  BlendMode.hpp.59C71AC43D72A362.idx  CircleShape.cpp.EA49887456DC0495.idx  CircleShape.hpp.50797C11065B5D5A.idx  Clipboard.cpp.F5937E449B9C062A.idx  Clipboard.hpp.270555E8CA431604.idx  ClipboardImpl.cpp.60F93A13C17FDF0A.idx  (+277 more)
.github/workflows/: ci.yml
include/3DExtensions/: Transformable3D.h  Vertex3D.h  VertexBuffer3D.h
include/Components/: Background.h  Camera.h  Car.h  Cube.h  GhostSpawner.h  ICar.h  Jeep.h  PlayerCar.h  TrafficSpawner.h  Transformable3D.h
include/Core/: EventManager.h  FontManager.h  Global.h  Graphics.h  IState.h  SoundManager.h  State.h  StateID.h  StateManager.h  TextureManager.h  WindowManager.h
include/States/: GameOverState.h  HighScoresState.h  HowToPlayState.h  MenuState.h  PauseState.h  PlayState.h  SettingsState.h
include/Util/: Path.h
src/: default.frag  default.vert  main.cpp  main.cpp.tt  main.cpp.txt
src/3DExtensions/: Transformable3D.cpp  VertexBuffer3D.cpp
src/Components/: Background.cpp  Camera.cpp  Car.cpp  Cube.cpp  GhostSpawner.cpp  Jeep.cpp  PlayerCar.cpp  TrafficSpawner.cpp  Transformable3D.cpp
src/Core/: EventManager.cpp  FontManager.cpp  Global.cpp  Graphics.cpp  SoundManager.cpp  StateManager.cpp  TextureManager.cpp  WindowManager.cpp
src/States/: GameOverState.cpp  HighScoresState.cpp  HowToPlayState.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp  SettingsState.cpp
src/Util/: Path.cpp
src/shaders/: cube.frag  cube.geo  cube.vert  default.frag  default.vert
